--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.5",
+    "@types/jsonwebtoken": "^8.3.2",
     "nodemon": "^1.18.9",
     "ts-node": "^8.0.3",
     "tslint": "^5.12.1",
@@ -22,8 +25,12 @@
   "dependencies": {
     "@types/express": "^4.16.1",
     "@types/node": "^10.12.18",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "sqlite3": "^4.0.6",
     "typeorm": "^0.2.12"
   }
